2007-08-31  Jens Granseuer  <jensgr@gmx.net>

	* appearance-font.c: (font_render_load), (setup_font_pair),
	(enum_group_load), (enum_group_create): don't define gconf_key as
	const and save a few casts

2007-08-31  Jens Granseuer  <jensgr@gmx.net>

	* appearance-font.c: (enum_group_destroy), (cb_show_details),
	(font_init), (font_shutdown):
	* appearance.h: don't leak the enum groups

2007-08-28  Gabor Kelemen  <kelemeng@gnome.hu>
	
	* data/appearance.glade: This time really fix bug 470532 (gtk-delete
	stock id is marked for translation)

2007-08-27  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_thumbnail_in_treeview): don't leak the
	thumbnails

2007-08-27  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_in_treeview),
	(gtk_theme_thumbnail_cb), (metacity_theme_thumbnail_cb),
	(icon_theme_thumbnail_cb), (changed_on_disk_cb): always generate
	thumbnails asynchronously. Mixing synchronous and asynchronous
	generation just doesn't work (bug #469849)

2007-08-27  Thomas Wood  <thos@gnome.org>

	Patch by: Gabor Kelemen <kelemeng@gnome.hu>

	* data/appearance.glade: Fix bug 470532 (gtk-delete stock id is marked for
	translation)

2007-08-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_get_thumbnail_from_cache):
	* gnome-wp-item.c: (gnome_wp_item_update_description): fix leaks (bug
	#469531)

2007-08-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-font.c: (cb_show_details): simply set the upper bound of
	the DPI spin button to the maximum we consider reasonable. This is one
	way to make sure we don't get SIGFPE if for some reason
	gdk_screen_get_{width,height}_mm returns 0 (bug #469580)

2007-08-22  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_select_after_realize): if no background
	image set, select "no wallpaper"

2007-08-14  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init):
	* data/appearance.glade: correct the item width and enable line